--- a/hospitals/templates/navigation.html
+++ b/hospitals/templates/navigation.html
@@ -132,7 +132,7 @@
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
 <body style="background-color: #f0f1f2;">
-<nav class="navbar navbar-expand-sm" style = "background-image : url({% static 'images/banner.svg' %}) ; border-bottom:1px solid red">
+<nav class="navbar navbar-expand-sm" style = "background-color : black ; border-bottom:1px solid red">
   <!-- Brand -->
   <a class="navbar-brand pl-5" href="#" style="color:white ; font-weight : bold">House Of Health</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
